# jellyfin-rust

./: .env.example  .gitignore  Cargo.toml  JELLYFIN-API.md  README.md  config.example.toml  flake.nix  jellyfin-rust.service
.github/workflows/: ci.yml  release.yml
src/: config.rs  main.rs
src/api/: branding.rs  collections.rs  display_preferences.rs  favorites.rs  filters.rs  home.rs  images.rs  items.rs  library.rs  localization.rs  mod.rs  movies.rs  persons.rs  playback.rs  playbackinfo.rs  playlists.rs  segments.rs  sessions.rs  shows.rs  stubs.rs  subtitles.rs  system.rs  tasks.rs  users.rs  videos.rs  views.rs
src/db/: mod.rs
src/models/: mod.rs
src/scanner/: mod.rs
src/services/: anidb.rs  anilist.rs  anime_db.rs  auth.rs  jikan.rs  mediainfo.rs  metadata.rs  mod.rs  tmdb.rs
